--- a/index.html
+++ b/index.html
@@ -81,13 +81,6 @@
           0 0 24px #ffeb3b;
       }
     }
-    .arrow-up {
-      font-size: 2.2em;
-      color: #FFA500;
-      text-shadow: 0 0 6px #ffcc66;
-      letter-spacing: 0.5em;
-      margin: 0.3em 0 0;
-    }
     .access-message {
       font-size: 1.35em;
       font-weight: 700;
@@ -102,37 +95,13 @@
       margin-top: 1.2em;
       text-align: left;
     }
-    .video-message .intro {
-      color: #fff;
-      display: block;
-      margin-bottom: 1em;
+    .feature-list {
+      list-style: disc;
+      margin-left: 1.2em;
+      padding-left: 0;
     }
-    .video-message-list-title {
-      font-size: 1.15em;
-      color: #ccc;
-      margin-top: 1em;
-      margin-bottom: 0.5em;
-      text-align: left;
-      padding: 0 1em;
-    }
-    .course-covers {
-      list-style: none;
-      padding-left: 1.2em;
-      margin: 0 1em 2em;
-      text-align: left;
-    }
-    .course-covers li {
-      position: relative;
-      padding-left: 1.2em;
-      margin-bottom: 0.5em;
-      color: #ccc;
-    }
-    .course-covers li::before {
-      content: "•";
-      color: #FFDD00;
-      position: absolute;
-      left: 0;
-      top: 0;
+    .feature-list li {
+      margin-bottom: 0.6em;
     }
 
     /* ──────────────────────────────────────────────────────────────────
@@ -312,7 +281,6 @@
 
     <div id="reviews-container" style="max-width:800px;margin:2em auto;padding:0 1em;"></div>
 
-    <div class="arrow-up">↑↑↑↑</div>
     <div class="access-message">✨ AI Made Simple: A Beginner’s Guide for Everyone</div>
     <div class="video-message">
       <ul class="feature-list">
