--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
           <a href="https://buy.stripe.com/6oUbJ0fzX3PSeOrgwf33W38" class="btn-india">
             🇮🇳 Pay ₹650 Rupees
           </a>
-          <a href="https://buy.stripe.com/6oUfZg0F3868cGjbbV33W39" class="btn-nigeria">
-            🇳🇬 Pay ₦11,000 Naira
-          </a>
+       <a class="btn-nigeria" href="https://paystack.com/buy/ai-made-easy" target="_blank">
+  🇳🇬 Pay ₦11,000 Naira
+</a>
+
           <a href="https://buy.stripe.com/3cIfZgcnLcmo7lZeo733W3c" class="btn-pk">
             🇵🇰 Pay PKR2,000
           </a>
