--- a/index.html
+++ b/index.html
@@ -470,3 +470,28 @@
 </body>
 </html>
 ```
+<!-- START: Global Impact + Benefits Block -->
+<section style="background-color: #FFFDE7; color: #000; padding: 2em 1em; text-align: center;">
+  <h2 style="font-weight: bold; font-size: 1.4em;">
+    we’ve helped <span style="color: #2C75FF; text-decoration: underline;">380+</span> businesses across the globe,<br>
+    and have over <span style="color: #2C75FF; text-decoration: underline;">60,000+</span> purchases of our ads courses
+  </h2>
+  <ul style="list-style: none; padding: 0; margin-top: 2em; max-width: 800px; margin-left: auto; margin-right: auto; text-align: left;">
+    <li style="margin-bottom: 1em;">
+      <span style="color: #00f8ff; font-size: 1.2em;">✔</span> Our creatives don’t just grab attention—they inspire clicks and conversions
+    </li>
+    <li style="margin-bottom: 1em;">
+      <span style="color: #00f8ff; font-size: 1.2em;">✔</span> Campaigns are rooted in real emotion and region-specific insight—not guesses
+    </li>
+    <li style="margin-bottom: 1em;">
+      <span style="color: #00f8ff; font-size: 1.2em;">✔</span> We automate where it matters—your time is saved, your revenue is multiplied
+    </li>
+    <li style="margin-bottom: 1em;">
+      <span style="color: #00f8ff; font-size: 1.2em;">✔</span> You get proven systems with flexibility to grow in Nigeria, India, the U.S., wherever
+    </li>
+    <li style="margin-bottom: 1em;">
+      <span style="color: #00f8ff; font-size: 1.2em;">✔</span> Our students are outperforming big-budget agencies—and showing receipts
+    </li>
+  </ul>
+</section>
+<!-- END: Global Impact + Benefits Block -->
