--- a/index.html
+++ b/index.html
@@ -281,17 +281,41 @@
 
     <div id="reviews-container" style="max-width:800px;margin:2em auto;padding:0 1em;"></div>
 
-    <div class="access-message">✨ AI Made Simple: A Beginner’s Guide for Everyone</div>
-    <div class="video-message">
-      <ul class="feature-list">
-        <li>1 Hour beginner friendly course.</li>
-        <li>What AI really is (and what it isn’t)</li>
-        <li>How AI is shaping industries and everyday life</li>
-        <li>Real-world examples and use cases</li>
-        <li>Ethical questions and responsible AI</li>
-        <li>Hands-on mini projects to bring your learning to life</li>
-        <li>Using AI for productivity as a freelancer and in the workplace</li>
-      </ul>
+    <!-- START: AI Made Easy Impact Block -->
+<section style="background-color: #FFFDE7; width: 100%; padding: 3em 1.5em; text-align: center;">
+  <div style="max-width: 750px; margin: 0 auto;">
+    <h2 style="font-weight: bold; font-size: 1.5em; margin-bottom: 1em; color: #000;">
+      The Future of AI Is Already Here—
+      <span style="background: linear-gradient(120deg, #00bfff, #007fff); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
+        Don’t Get Left Behind
+      </span>
+    </h2>
+    <ul style="list-style: none; padding: 0; margin: 2em auto 0; text-align: left; color: #000;">
+      <li style="margin-bottom: 1em;">
+        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
+        Learn how AI is transforming industries—from marketing to medicine to entrepreneurship.
+      </li>
+      <li style="margin-bottom: 1em;">
+        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
+        No tech background needed—this course is built for entrepreneurs, freelancers, and creators.
+      </li>
+      <li style="margin-bottom: 1em;">
+        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
+        Hands-on projects show you how to use AI tools for productivity, content, and automation.
+      </li>
+      <li style="margin-bottom: 1em;">
+        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
+        Understand ethical AI and how to use it responsibly in your business or career.
+      </li>
+      <li style="margin-bottom: 1em;">
+        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
+        Join thousands of students worldwide who are already building smarter, faster workflows.
+      </li>
+    </ul>
+  </div>
+</section>
+<!-- END: AI Made Easy Impact Block -->
+
 
       <div class="payment-card">
         <div class="payment-intro">🌐 Pay in your local currency</div>
@@ -469,5 +493,4 @@
   </script>
 </body>
 </html>
-```
 
