--- a/index.html
+++ b/index.html
@@ -281,27 +281,24 @@
 
     <div id="reviews-container" style="max-width:800px;margin:2em auto;padding:0 1em;"></div>
 
-    <!-- START: AI Made Easy Impact Block -->
+    <!-- START: Global Impact + Benefits Block -->
 <section style="background-color: #FFFDE7; width: 100%; padding: 3em 1.5em; text-align: center;">
   <div style="max-width: 750px; margin: 0 auto;">
     <h2 style="font-weight: bold; font-size: 1.5em; margin-bottom: 1em; color: #000;">
-      The Future of AI Is Already Here—
+      We’ve empowered 
       <span style="background: linear-gradient(120deg, #00bfff, #007fff); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
-        Don’t Get Left Behind
-      </span>
+        thousands
+      </span> 
+      of students worldwide to embrace the future of AI—no tech background required.
     </h2>
     <ul style="list-style: none; padding: 0; margin: 2em auto 0; text-align: left; color: #000;">
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        Learn how AI is transforming industries—from marketing to medicine to entrepreneurship.
+        Learn how AI is reshaping industries—from marketing to medicine to entrepreneurship.
       </li>
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        No tech background needed—this course is built for entrepreneurs, freelancers, and creators.
-      </li>
-      <li style="margin-bottom: 1em;">
-        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        Hands-on projects show you how to use AI tools for productivity, content, and automation.
+        Build real-world projects that boost productivity and automate your workflows.
       </li>
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
@@ -309,12 +306,78 @@
       </li>
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        Join thousands of students worldwide who are already building smarter, faster workflows.
+        Get ahead of the curve—AI is no longer optional, it’s essential.
+      </li>
+      <li style="margin-bottom: 1em;">
+        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
+        Join a global movement of entrepreneurs, freelancers, and creatives embracing AI.
       </li>
     </ul>
   </div>
 </section>
-<!-- END: AI Made Easy Impact Block -->
+<!-- END: Global Impact + Benefits Block -->
+
+    <!-- START: Niche Diversity Block -->
+<section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
+  <div style="max-width: 750px; margin: 0 auto;">
+
+    <h2 style="font-weight: bold; font-size: 1.5em; color: #000; margin-bottom: 1em;">
+      Trusted by Learners in Over 
+      <span style="background: linear-gradient(120deg, #00bfff, #007fff); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
+        70+ Fields
+      </span>: From Solo Creators to Scaling Startups
+    </h2>
+
+    <p style="font-size: 1em; color: #000; margin-bottom: 2em;">
+      AI Made Easy has helped entrepreneurs, educators, and professionals across industries unlock smarter workflows, boost creativity, and stay competitive in a rapidly evolving world.
+    </p>
+
+    <!-- Freelancers & Creators -->
+    <div style="text-align: left; margin-bottom: 2em;">
+      <h3 style="font-weight: bold; font-size: 1.25em; color: #000; margin-bottom: 0.75em;">
+        Freelancers & Creators
+      </h3>
+      <div style="padding-left: 1.5em; color: #000;">
+        <p>✔ Content Creators and Influencers</p>
+        <p>✔ Freelance Designers and Developers</p>
+        <p>✔ Copywriters and Brand Strategists</p>
+        <p>✔ Virtual Assistants and Consultants</p>
+        <p>✔ Podcasters and YouTubers</p>
+      </div>
+    </div>
+
+    <!-- Coaches & Educators -->
+    <div style="text-align: left; margin-bottom: 2em;">
+      <h3 style="font-weight: bold; font-size: 1.25em; color: #000; margin-bottom: 0.75em;">
+        Coaches & Educators
+      </h3>
+      <div style="padding-left: 1.5em; color: #000;">
+        <p>✔ Online Course Creators</p>
+        <p>✔ Business and Life Coaches</p>
+        <p>✔ Tutors and Academic Mentors</p>
+        <p>✔ Workshop Hosts and Facilitators</p>
+        <p>✔ Language and Skill Trainers</p>
+      </div>
+    </div>
+
+    <!-- Entrepreneurs & Startups -->
+    <div style="text-align: left;">
+      <h3 style="font-weight: bold; font-size: 1.25em; color: #000; margin-bottom: 0.75em;">
+        Entrepreneurs & Startups
+      </h3>
+      <div style="padding-left: 1.5em; color: #000;">
+        <p>✔ Ecommerce Founders</p>
+        <p>✔ SaaS and Tech Innovators</p>
+        <p>✔ Marketing and Branding Agencies</p>
+        <p>✔ Real Estate and Finance Professionals</p>
+        <p>✔ Health and Wellness Startups</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- END: Niche Diversity Block -->
+
 
 
       <div class="payment-card">
