--- a/index.html
+++ b/index.html
@@ -281,24 +281,27 @@
 
     <div id="reviews-container" style="max-width:800px;margin:2em auto;padding:0 1em;"></div>
 
-    <!-- START: Global Impact + Benefits Block -->
+    <!-- START: AI Made Easy Impact Block -->
 <section style="background-color: #FFFDE7; width: 100%; padding: 3em 1.5em; text-align: center;">
   <div style="max-width: 750px; margin: 0 auto;">
     <h2 style="font-weight: bold; font-size: 1.5em; margin-bottom: 1em; color: #000;">
-      We’ve empowered 
+      The Future of AI Is Already Here—
       <span style="background: linear-gradient(120deg, #00bfff, #007fff); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
-        thousands
-      </span> 
-      of students worldwide to embrace the future of AI—no tech background required.
+        Don’t Get Left Behind
+      </span>
     </h2>
     <ul style="list-style: none; padding: 0; margin: 2em auto 0; text-align: left; color: #000;">
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        Learn how AI is reshaping industries—from marketing to medicine to entrepreneurship.
+        Learn how AI is transforming industries—from marketing to medicine to entrepreneurship.
       </li>
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        Build real-world projects that boost productivity and automate your workflows.
+        No tech background needed—this course is built for entrepreneurs, freelancers, and creators.
+      </li>
+      <li style="margin-bottom: 1em;">
+        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
+        Hands-on projects show you how to use AI tools for productivity, content, and automation.
       </li>
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
@@ -306,30 +309,27 @@
       </li>
       <li style="margin-bottom: 1em;">
         <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        Get ahead of the curve—AI is no longer optional, it’s essential.
-      </li>
-      <li style="margin-bottom: 1em;">
-        <span style="display: inline-block; width: 1.2em; height: 1.2em; border-radius: 50%; background: linear-gradient(120deg, #00bfff, #007fff); color: #fff; text-align: center; line-height: 1.2em; font-weight: bold; font-size: 0.85em;">✔</span>
-        Join a global movement of entrepreneurs, freelancers, and creatives embracing AI.
+        Join thousands of students worldwide who are already building smarter, faster workflows.
       </li>
     </ul>
   </div>
 </section>
-<!-- END: Global Impact + Benefits Block -->
+<!-- END: AI Made Easy Impact Block -->
 
-    <!-- START: Niche Diversity Block -->
+   <!-- START: Niche Diversity Block -->
 <section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
   <div style="max-width: 750px; margin: 0 auto;">
 
     <h2 style="font-weight: bold; font-size: 1.5em; color: #000; margin-bottom: 1em;">
-      Trusted by Learners in Over 
-      <span style="background: linear-gradient(120deg, #00bfff, #007fff); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
-        70+ Fields
-      </span>: From Solo Creators to Scaling Startups
+      We’ve empowered 
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
+        80,000+ (and counting)
+      </span> 
+      students worldwide to embrace the future of AI—no tech background required.
     </h2>
 
     <p style="font-size: 1em; color: #000; margin-bottom: 2em;">
-      AI Made Easy has helped entrepreneurs, educators, and professionals across industries unlock smarter workflows, boost creativity, and stay competitive in a rapidly evolving world.
+      Whether you're building a brand, scaling a business, or simply staying ahead of the curve—AI Made Easy gives you the tools to thrive in a tech-driven world.
     </p>
 
     <!-- Freelancers & Creators -->
@@ -346,31 +346,17 @@
       </div>
     </div>
 
-    <!-- Coaches & Educators -->
-    <div style="text-align: left; margin-bottom: 2em;">
+    <!-- Business, Educators, and Curious Minds -->
+    <div style="text-align: left;">
       <h3 style="font-weight: bold; font-size: 1.25em; color: #000; margin-bottom: 0.75em;">
-        Coaches & Educators
+        Business, Educators, and Curious Minds
       </h3>
       <div style="padding-left: 1.5em; color: #000;">
         <p>✔ Online Course Creators</p>
-        <p>✔ Business and Life Coaches</p>
+        <p>✔ Students</p>
         <p>✔ Tutors and Academic Mentors</p>
-        <p>✔ Workshop Hosts and Facilitators</p>
-        <p>✔ Language and Skill Trainers</p>
-      </div>
-    </div>
-
-    <!-- Entrepreneurs & Startups -->
-    <div style="text-align: left;">
-      <h3 style="font-weight: bold; font-size: 1.25em; color: #000; margin-bottom: 0.75em;">
-        Entrepreneurs & Startups
-      </h3>
-      <div style="padding-left: 1.5em; color: #000;">
-        <p>✔ Ecommerce Founders</p>
         <p>✔ SaaS and Tech Innovators</p>
-        <p>✔ Marketing and Branding Agencies</p>
-        <p>✔ Real Estate and Finance Professionals</p>
-        <p>✔ Health and Wellness Startups</p>
+        <p>✔ Anyone who wants to stay productive and current with emerging technologies</p>
       </div>
     </div>
 
@@ -378,8 +364,7 @@
 </section>
 <!-- END: Niche Diversity Block -->
 
-
-
+<!-- Begin: PaymentBlock -->
       <div class="payment-card">
         <div class="payment-intro">🌐 Pay in your local currency</div>
         <div class="payment-buttons">
@@ -406,7 +391,8 @@
       </div>
     </div>
   </main>
-
+!-- End: PaymentBlock -->
+  
   <footer>
     © 2025 STEMSphere Academy. All rights reserved.
   </footer>
