--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
 
     <div id="reviews-container" style="max-width:800px;margin:2em auto;padding:0 1em;"></div>
 
-    <!-- START: AI Made Easy Impact Block -->
+ <!-- START: AI Made Easy Impact Block -->
 <section style="background-color: #FFFDE7; width: 100%; padding: 3em 1.5em; text-align: center;">
   <div style="max-width: 750px; margin: 0 auto;">
     <h2 style="font-weight: bold; font-size: 1.5em; margin-bottom: 1em; color: #000;">
       The Future of AI Is Already Here—
-      <span style="background: linear-gradient(120deg, #00bfff, #007fff); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; text-decoration: underline; font-weight: bold;">
         Don’t Get Left Behind
       </span>
     </h2>
@@ -315,6 +315,7 @@
   </div>
 </section>
 <!-- END: AI Made Easy Impact Block -->
+
 
    <!-- START: Niche Diversity Block -->
 <section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
@@ -391,7 +392,6 @@
       </div>
     </div>
   </main>
-!-- End: PaymentBlock -->
   
   <footer>
     © 2025 STEMSphere Academy. All rights reserved.
