--- a/index.html
+++ b/index.html
@@ -365,6 +365,53 @@
 </section>
 <!-- END: Niche Diversity Block -->
 
+    <!-- START: AI Made Easy Syllabus Block -->
+<section style="background-color: #FFFDE7; width: 100%; padding: 3em 1.5em; text-align: center;">
+  <div style="max-width: 800px; margin: 0 auto;">
+    <h2 style="font-weight: bold; font-size: 1.6em; margin-bottom: 1em; color: #000;">
+      What’s Covered in the Course
+    </h2>
+    <p style="font-size: 1em; margin-bottom: 2em; color: #333;">
+      A beginner-friendly roadmap to understanding and applying AI—no tech background required.
+    </p>
+    <div style="text-align: left;">
+      <ul style="list-style: none; padding: 0; margin: 0;">
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 1:</strong> What is Artificial Intelligence <em>(Included in full purchase)</em>
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 2:</strong> Busting Myths About Artificial Intelligence <em>(Included in full purchase)</em>
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 3:</strong> Types of AI and Its Applications
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 4:</strong> Exploring Popular AI Tools
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 5:</strong> Using AI in Everyday Life
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 7a:</strong> Hands-On Workshop #1
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 7b:</strong> Hands-On Workshop #2 – ChatGPT
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 7c:</strong> Creating a Realistic Talking Avatar
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 7d:</strong> Notion AI
+        </li>
+        <li style="margin-bottom: 1.2em;">
+          <strong>Module 8:</strong> Introduction to Python Computer Programming
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+<!-- END: AI Made Easy Syllabus Block -->
+
 <!-- Begin: PaymentBlock -->
       <div class="payment-card">
         <div class="payment-intro">🌐 Pay in your local currency</div>
