--- a/index.html
+++ b/index.html
@@ -365,47 +365,27 @@
 </section>
 <!-- END: Niche Diversity Block -->
 
-    <!-- START: AI Made Easy Syllabus Block -->
+<!-- START: AI Made Easy Syllabus Block -->
 <section style="background-color: #FFFDE7; width: 100%; padding: 3em 1.5em; text-align: center;">
   <div style="max-width: 800px; margin: 0 auto;">
     <h2 style="font-weight: bold; font-size: 1.6em; margin-bottom: 1em; color: #000;">
       What’s Covered in the Course
     </h2>
-    <p style="font-size: 1em; margin-bottom: 2em; color: #333;">
-      A beginner-friendly roadmap to understanding and applying AI—no tech background required.
+    <p style="font-size: 1em; margin-bottom: 2em; color: #000;">
+      A beginner-friendly roadmap to understanding and applying AI. No tech background required.
     </p>
-    <div style="text-align: left;">
+    <div style="text-align: left; color: #000;">
       <ul style="list-style: none; padding: 0; margin: 0;">
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 1:</strong> What is Artificial Intelligence <em>(Included in full purchase)</em>
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 2:</strong> Busting Myths About Artificial Intelligence <em>(Included in full purchase)</em>
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 3:</strong> Types of AI and Its Applications
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 4:</strong> Exploring Popular AI Tools
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 5:</strong> Using AI in Everyday Life
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 7a:</strong> Hands-On Workshop #1
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 7b:</strong> Hands-On Workshop #2 – ChatGPT
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 7c:</strong> Creating a Realistic Talking Avatar
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 7d:</strong> Notion AI
-        </li>
-        <li style="margin-bottom: 1.2em;">
-          <strong>Module 8:</strong> Introduction to Python Computer Programming
-        </li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 1: What is Artificial Intelligence <em>(Included in full purchase)</em></li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 2: Busting Myths About Artificial Intelligence <em>(Included in full purchase)</em></li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 3: Types of AI and Its Applications</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 4: Exploring Popular AI Tools</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 5: Using AI in Everyday Life</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7a: Hands-On Workshop #1</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7b: Hands-On Workshop #2 – ChatGPT</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7c: Creating a Realistic Talking Avatar</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7d: Notion AI</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 8: Introduction to Python Computer Programming</li>
       </ul>
     </div>
   </div>
