--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
     </p>
     <div style="text-align: left; color: #000;">
       <ul style="list-style: none; padding: 0; margin: 0;">
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 1: What is Artificial Intelligence <em>(Included in full purchase)</em></li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 2: Busting Myths About Artificial Intelligence <em>(Included in full purchase)</em></li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 3: Types of AI and Its Applications</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 4: Exploring Popular AI Tools</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 5: Using AI in Everyday Life</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7a: Hands-On Workshop #1</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7b: Hands-On Workshop #2 – ChatGPT</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7c: Creating a Realistic Talking Avatar</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 7d: Notion AI</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤➤</span> Module 8: Introduction to Python Computer Programming</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 1: What is Artificial Intelligence <em>(Included in full purchase)</em></li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 2: Busting Myths About Artificial Intelligence <em>(Included in full purchase)</em></li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 3: Types of AI and Its Applications</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 4: Exploring Popular AI Tools</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 5: Using AI in Everyday Life</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7a: Hands-On Workshop #1</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7b: Hands-On Workshop #2 – ChatGPT</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7c: Creating a Realistic Talking Avatar</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7d: Notion AI</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 8: Introduction to Python Computer Programming</li>
       </ul>
     </div>
   </div>
