--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
     </p>
     <div style="text-align: left; color: #000;">
       <ul style="list-style: none; padding: 0; margin: 0;">
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 1: What is Artificial Intelligence <em>(Included in full purchase)</em></li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 2: Busting Myths About Artificial Intelligence <em>(Included in full purchase)</em></li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 3: Types of AI and Its Applications</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 4: Exploring Popular AI Tools</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 5: Using AI in Everyday Life</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7a: Hands-On Workshop #1</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7b: Hands-On Workshop #2 – ChatGPT</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7c: Creating a Realistic Talking Avatar</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 7d: Notion AI</li>
-        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">⤷⤷</span> Module 8: Introduction to Python Computer Programming</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 1: What is Artificial Intelligence</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 2: Busting Myths About Artificial Intelligence</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 3: Types of AI and Its Applications</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 4: Exploring Popular AI Tools</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 5: Using AI in Everyday Life</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 7a: Hands-On Workshop #1</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 7b: Hands-On Workshop #2 – ChatGPT</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 7c: Creating a Realistic Talking Avatar</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 7d: Notion AI</li>
+        <li style="margin-bottom: 1.2em;"><span style="color: #b30000; font-weight: bold;">➤➤</span> Module 8: Introduction to Python Computer Programming</li>
       </ul>
     </div>
   </div>
@@ -419,6 +419,22 @@
       </div>
     </div>
   </main>
+
+<!-- START: Affordably Priced Promo Block -->
+<section style="background-color: #FFE4EC; width: 100%; padding: 3em 1.5em; text-align: center;">
+  <div style="max-width: 750px; margin: 0 auto;">
+    <h2 style="font-weight: bold; font-size: 1.5em; margin-bottom: 1em; color: #000;">
+      Start Smart. Learn Fast. Grow Confident.
+    </h2>
+    <p style="font-size: 1em; margin-bottom: 2em; color: #000;">
+      Our <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">affordably priced</span> AI Made Easy course is designed to help students get their feet wet before diving into more complex subjects like Python Programming, SAT Math, Chemistry, Public Speaking, Biology, and more.
+    </p>
+    <p style="font-size: 1em; color: #000;">
+      We’re confident that once you experience the clarity, creativity, and hands-on learning in this course, you’ll come to us for the rest of your e-learning journey.
+    </p>
+  </div>
+</section>
+<!-- END: Affordably Priced Promo Block -->
   
   <footer>
     © 2025 STEMSphere Academy. All rights reserved.
