--- a/index.html
+++ b/index.html
@@ -421,14 +421,22 @@
   </main>
 
 <!-- START: Affordably Priced Promo Block -->
-<section style="background-color: #FFE4EC; width: 100%; padding: 3em 1.5em; text-align: center;">
+<section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
   <div style="max-width: 750px; margin: 0 auto;">
-    <h2 style="font-weight: bold; font-size: 1.5em; margin-bottom: 1em; color: #000;">
-      Start Smart. Learn Fast. Grow Confident.
+    <h2 style="font-weight: bold; font-size: 1.5em; color: #000; margin-bottom: 1em;">
+      Start Smart. Start 
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
+        Affordably
+      </span>. Grow Confident.
     </h2>
-    <p style="font-size: 1em; margin-bottom: 2em; color: #000;">
-      Our <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">affordably priced</span> AI Made Easy course is designed to help students get their feet wet before diving into more complex subjects like Python Programming, SAT Math, Chemistry, Public Speaking, Biology, and more.
+
+    <p style="font-size: 1em; color: #000; margin-bottom: 2em;">
+      Our 
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
+        affordably priced
+      </span> AI Made Easy course helps students get their feet wet before diving into more advanced subjects like Python Programming, SAT Math, Chemistry, Public Speaking, Biology, and more.
     </p>
+
     <p style="font-size: 1em; color: #000;">
       We’re confident that once you experience the clarity, creativity, and hands-on learning in this course, you’ll come to us for the rest of your e-learning journey.
     </p>
